# bartender

./: Cargo.toml  README.md  bartenderrc  bartenderrc.toml
src/: bartender.rs  c_helper.rs  main.rs  mkfifo.rs  poll.rs  types.rs
