[package]
name = "bartender"
version = "0.4.0"
authors = ["Inokentiy Babushkin <inokentiy.babushkin@googlemail.com>"]
homepage = "https://ibabushkin.github.io/"
repository = "https://github.com/ibabushkin/bartender"
readme = "README.md"
keywords = ["bar", "X"]
license = "BSD3"

[dependencies]
getopts = "^0.2.14"
libc = "^0.2.15"
mustache = { git = "https://github.com/nickel-org/rust-mustache" }
#"^0.7.0"
time = "^0.1.35"
toml = "^0.2.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
