[package]
name = "bartender"
version = "0.6.1"
authors = ["Inokentiy Babushkin <twk@twki.de>"]
homepage = "https://ibabushkin.github.io/"
repository = "https://github.com/ibabushkin/bartender"
readme = "README.md"
keywords = ["bar", "X"]
license = "BSD3"

[dependencies]
getopts = "^0.2.14"
libc = "^0.2.15"
mustache = { git = "https://github.com/ibabushkin/rust-mustache" }
time = "^0.1.35"
toml = "^0.2.1"
pledge = { version = "*", optional = true }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
